refactor some code

--- a/august(4-6)/Test/22-8-23.ipynb
+++ b/august(4-6)/Test/22-8-23.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "5.477225575051661"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "19    Sirotkin      1   23"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "19    Sirotkin      1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "33"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "60"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "19    Sirotkin      1   23"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1003,20 +1003,14 @@
        "66"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def NameG(x):\n",
-    "    \n",
-    "    if(x[0].lower() == 'g'):\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "    \n",
-    "df[df.Driver.apply(lambda x : NameG(x))].Score.sum()"
+    "\n",
+    "df[df.Driver.apply(lambda x : x[0] == 'G')].Score.sum()"
    ]
   },
   {
@@ -1028,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1031,7 @@
        "array(['Hamilton', 'Raikkonen', 'Alonso'], dtype=object)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1227,7 @@
        "19   Raikkonen    251   39"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,210 +1268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Driver</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>random</th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>408</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Vettel</td>\n",
-       "      <td>320</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Raikkonen</td>\n",
-       "      <td>251</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Verstappen</td>\n",
-       "      <td>249</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bottas</td>\n",
-       "      <td>247</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Ricciardo</td>\n",
-       "      <td>170</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Hulkenberg</td>\n",
-       "      <td>69</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Perez</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Magnussen</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Sainz</td>\n",
-       "      <td>53</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Alonso</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Ocon</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Leclerc</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Grosjean</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Gasly</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Vandoorne</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Ericsson</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Stroll</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Hartley</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Sirotkin</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Driver  Score  random  Age\n",
-       "0     Hamilton    408       0   33\n",
-       "1       Vettel    320       0   31\n",
-       "2    Raikkonen    251       0   39\n",
-       "3   Verstappen    249       0   21\n",
-       "4       Bottas    247       0   29\n",
-       "5    Ricciardo    170       0   29\n",
-       "6   Hulkenberg     69       0   31\n",
-       "7        Perez     62       0   28\n",
-       "8    Magnussen     56       0   26\n",
-       "9        Sainz     53       0   24\n",
-       "10      Alonso     50       0   37\n",
-       "11        Ocon     49       0   22\n",
-       "12     Leclerc     39       0   21\n",
-       "13    Grosjean     37       0   32\n",
-       "14       Gasly     29       0   22\n",
-       "15   Vandoorne     12       0   26\n",
-       "16    Ericsson      9       0   28\n",
-       "17      Stroll      6       0   20\n",
-       "18     Hartley      4       0   29\n",
-       "19    Sirotkin      1       0   23"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.insert(2,'random',0)\n"
    ]
