did so many changes in the lemmatization code and stemming code

--- a/august(4-6)/Datasets/label-encoding.ipynb
+++ b/august(4-6)/Datasets/label-encoding.ipynb
@@ -84,68 +84,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>mouse</td>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>mouse</td>\n",
+       "      <td>dog</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fish</td>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>dog</td>\n",
+       "      <td>mouse</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>dog</td>\n",
+       "      <th>161</th>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>dog</td>\n",
+       "      <th>162</th>\n",
+       "      <td>cat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>dog</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
+       "      <th>163</th>\n",
        "      <td>mouse</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>mouse</td>\n",
+       "      <th>164</th>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>fish</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>142 rows × 1 columns</p>\n",
+       "<p>166 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    animals\n",
-       "0     mouse\n",
-       "1     mouse\n",
-       "2      fish\n",
-       "3       dog\n",
-       "4       dog\n",
+       "0       cat\n",
+       "1       dog\n",
+       "2       cat\n",
+       "3       cat\n",
+       "4     mouse\n",
        "..      ...\n",
-       "137     dog\n",
-       "138     dog\n",
-       "139     dog\n",
-       "140   mouse\n",
-       "141   mouse\n",
+       "161     cat\n",
+       "162     cat\n",
+       "163   mouse\n",
+       "164     dog\n",
+       "165    fish\n",
        "\n",
-       "[142 rows x 1 columns]"
+       "[166 rows x 1 columns]"
       ]
      },
      "execution_count": 7,
@@ -174,13 +174,14 @@
     {
      "data": {
       "text/plain": [
-       "array([3, 3, 2, 1, 1, 2, 2, 0, 3, 3, 1, 1, 0, 2, 2, 1, 3, 1, 1, 1, 3, 1,\n",
-       "       2, 0, 3, 3, 2, 0, 0, 0, 0, 0, 1, 3, 2, 3, 1, 1, 1, 0, 2, 3, 3, 2,\n",
-       "       3, 3, 2, 2, 0, 2, 0, 3, 2, 3, 3, 0, 3, 2, 1, 2, 0, 3, 0, 2, 0, 2,\n",
-       "       3, 0, 1, 1, 1, 0, 3, 2, 1, 3, 0, 0, 2, 2, 0, 3, 3, 0, 0, 3, 3, 1,\n",
-       "       2, 1, 2, 0, 3, 1, 1, 1, 1, 1, 3, 0, 1, 3, 0, 1, 3, 2, 1, 3, 1, 1,\n",
-       "       2, 1, 2, 1, 2, 2, 2, 0, 3, 0, 2, 1, 0, 3, 1, 3, 1, 2, 3, 2, 3, 1,\n",
-       "       3, 0, 2, 2, 0, 1, 1, 1, 3, 3])"
+       "array([0, 1, 0, 0, 3, 0, 1, 3, 0, 3, 3, 3, 0, 1, 2, 2, 3, 0, 3, 1, 2, 1,\n",
+       "       3, 2, 0, 3, 1, 3, 3, 2, 3, 2, 3, 0, 0, 2, 2, 2, 2, 1, 1, 0, 0, 2,\n",
+       "       1, 1, 1, 0, 1, 2, 0, 2, 1, 0, 2, 1, 1, 0, 3, 3, 1, 2, 1, 0, 2, 3,\n",
+       "       0, 2, 1, 3, 2, 0, 2, 2, 0, 1, 1, 0, 1, 3, 3, 1, 1, 0, 1, 2, 3, 0,\n",
+       "       0, 2, 1, 3, 2, 3, 3, 1, 1, 3, 2, 2, 1, 0, 2, 1, 3, 3, 3, 0, 1, 1,\n",
+       "       3, 2, 1, 1, 2, 1, 0, 2, 1, 1, 3, 0, 2, 3, 1, 1, 2, 3, 2, 1, 1, 3,\n",
+       "       0, 2, 3, 0, 3, 1, 3, 2, 0, 3, 1, 2, 3, 0, 3, 1, 2, 0, 0, 1, 0, 1,\n",
+       "       0, 2, 3, 0, 1, 1, 2, 0, 0, 3, 1, 2])"
       ]
      },
      "execution_count": 9,
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -234,28 +235,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>mouse</td>\n",
-       "      <td>3</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>mouse</td>\n",
-       "      <td>3</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fish</td>\n",
-       "      <td>2</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>1</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>1</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -263,53 +264,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>1</td>\n",
+       "      <th>161</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>1</td>\n",
+       "      <th>162</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
+       "      <th>163</th>\n",
        "      <td>mouse</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>mouse</td>\n",
-       "      <td>3</td>\n",
+       "      <th>164</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>fish</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>142 rows × 2 columns</p>\n",
+       "<p>166 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    animals  animal\n",
-       "0     mouse       3\n",
-       "1     mouse       3\n",
-       "2      fish       2\n",
-       "3       dog       1\n",
-       "4       dog       1\n",
+       "0       cat       0\n",
+       "1       dog       1\n",
+       "2       cat       0\n",
+       "3       cat       0\n",
+       "4     mouse       3\n",
        "..      ...     ...\n",
-       "137     dog       1\n",
-       "138     dog       1\n",
-       "139     dog       1\n",
-       "140   mouse       3\n",
-       "141   mouse       3\n",
+       "161     cat       0\n",
+       "162     cat       0\n",
+       "163   mouse       3\n",
+       "164     dog       1\n",
+       "165    fish       2\n",
        "\n",
-       "[142 rows x 2 columns]"
+       "[166 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
