did some changes can't remember

--- a/august(4-6)/NLTK/data-cleaning.ipynb
+++ b/august(4-6)/NLTK/data-cleaning.ipynb
@@ -10,7 +10,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "import string\n",
-    "import demoji\n"
+    "import demoji"
    ]
   },
   {
@@ -1615,11 +1615,9 @@
     "words = text.split();\n",
     "\n",
     "print(words)\n",
-    "\n",
     "for word in words:\n",
     "    if word in stop_words:\n",
-    "        words.remove(word)\n",
-    "        \n"
+    "        words.remove(word)\n"
    ]
   },
   {
@@ -1739,7 +1737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \" \".join(i for i in tw.text)\n"
+    "# \" \".join(i for i in tw.text)"
    ]
   },
   {
