--- a/august(4-6)/visualization/netflix-visualization.ipynb
+++ b/august(4-6)/visualization/netflix-visualization.ipynb
@@ -623,10 +623,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(2, 4), (4, 16), (6, 36), (8, 64), (10, 100)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {(i,i**2) for i in range(1,11) if i%2 == 0 }\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[77]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,2,4,5,6,77,8,8]\n",
+    "\n",
+    "list(map((lambda x : x**2), lst))\n",
+    "\n",
+    "list(filter((lambda x: x>45), lst))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -645,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
