--- a/august(4-6)/NLTK/train_test.ipynb
+++ b/august(4-6)/NLTK/train_test.ipynb
@@ -376,10 +376,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'egaugnal nohtyP'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = 'Python language'\n",
+    "\n",
+    "st[-1:-16:-1]\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
